--- a/guice/pom.xml
+++ b/guice/pom.xml
@@ -7,13 +7,13 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.atmosphere</groupId>
-    <artifactId>atmosphere-extras</artifactId>
+    <name>atmosphere-guice-project</name>
     <version>1.1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
-    <name>atmosphere-extras</name>
-    <url>https://github.com/Atmosphere/atmosphere</url>
+    <url>https://github.com/Atmosphere/atmosphere-extensions/guice</url>
     <modules>
         <module>modules</module>
         <module>samples/chat-guice</module>
+        <module>samples/di-guice-sample</module>
     </modules>
 </project>
