--- a/hazelcast/pom.xml
+++ b/hazelcast/pom.xml
@@ -7,11 +7,10 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.atmosphere</groupId>
-    <artifactId>atmosphere-extras</artifactId>
+    <name>atmosphere-hazelcast-project</name>
     <version>1.1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
-    <name>atmosphere-extras</name>
-    <url>https://github.com/Atmosphere/atmosphere</url>
+    <url>https://github.com/Atmosphere/atmosphere-extensions/hazelcast</url>
     <modules>
         <module>modules</module>
         <module>samples</module>
