--- a/socketio/pom.xml
+++ b/socketio/pom.xml
@@ -8,7 +8,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.atmosphere</groupId>
     <name>atmosphere-socketio-project</name>
-    <version>1.1.0-SNAPSHOT</version>
+    <artifactId>1.1.0-SNAPSHOT</artifactId>
     <packaging>pom</packaging>
     <url>https://github.com/Atmosphere/atmosphere-extensions/socketio</url>
     <modules>
