--- a/gwt/samples/gwt-jsdemo/pom.xml
+++ b/gwt/samples/gwt-jsdemo/pom.xml
@@ -3,8 +3,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.atmosphere.samples</groupId>
-        <artifactId>atmosphere-samples</artifactId>
+        <groupId>org.atmosphere</groupId>
+        <artifactId>atmosphere-project</artifactId>
         <version>1.1.0-SNAPSHOT</version>
     </parent>
 
