--- a/gwt/samples/gwt-chat/pom.xml
+++ b/gwt/samples/gwt-chat/pom.xml
@@ -4,8 +4,8 @@
 
     <parent>
         <groupId>org.atmosphere</groupId>
-        <artifactId>atmosphere-project</artifactId>
-        <version>1.1.0-SNAPSHOT</version>
+        <artifactId>atmosphere-gwt-project</artifactId>
+        <version>1.1.1-SNAPSHOT</version>
     </parent>
 
     <groupId>org.atmosphere.samples</groupId>
@@ -98,13 +98,13 @@
         <dependency>
             <groupId>org.atmosphere</groupId>
             <artifactId>atmosphere-gwt-client</artifactId>
-            <version>1.1.0-SNAPSHOT</version>
+            <version>1.1.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.atmosphere</groupId>
             <artifactId>atmosphere-gwt-server</artifactId>
-            <version>1.1.0-SNAPSHOT</version>
+            <version>1.1.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.google.gwt</groupId>
