--- a/gwt/samples/gwt-jsdemo/pom.xml
+++ b/gwt/samples/gwt-jsdemo/pom.xml
@@ -4,7 +4,7 @@
 
     <parent>
         <groupId>org.atmosphere</groupId>
-        <artifactId>atmosphere-project</artifactId>
+        <artifactId>atmosphere-gwt</artifactId>
         <version>1.1.0-SNAPSHOT</version>
     </parent>
 
@@ -24,14 +24,14 @@
         <dependency>
             <groupId>org.atmosphere</groupId>
             <artifactId>atmosphere-gwt-js</artifactId>
-            <version>1.1.0-SNAPSHOT</version>
+            <version>1.1.1-SNAPSHOT</version>
             <type>war</type>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.atmosphere</groupId>
             <artifactId>atmosphere-gwt-server</artifactId>
-            <version>1.1.0-SNAPSHOT</version>
+            <version>1.1.1-SNAPSHOT</version>
             <exclusions>
                 <exclusion>
                     <artifactId>gwt-servlet</artifactId>
@@ -42,7 +42,7 @@
         <dependency>
             <groupId>org.atmosphere</groupId>
             <artifactId>atmosphere-gwt-jackson</artifactId>
-            <version>1.1.0-SNAPSHOT</version>
+            <version>1.1.1-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
