--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,7 @@ gwt/samples/gwt-chat/src/main/webapp/WEB-INF/classes/
 gwt/samples/gwt-conn-share/src/main/webapp/WEB-INF/classes/
 atlassian-ide-plugin.xml
 
+gwt/samples/gwt-chat/src/main/gwt-unitCache/
+gwt/samples/gwt-chat/src/main/webapp/WEB-INF/deploy/gwtDemo/
+gwt/samples/gwt-chat/src/main/webapp/WEB-INF/lib/
+gwt/samples/gwt-chat/src/main/webapp/gwtDemo/
