--- a/gwt/samples/gwt-conn-share/pom.xml
+++ b/gwt/samples/gwt-conn-share/pom.xml
@@ -4,8 +4,9 @@
 
     <parent>
         <groupId>org.atmosphere</groupId>
-        <artifactId>atmosphere-project</artifactId>
+        <artifactId>atmosphere-gwt-project</artifactId>
         <version>1.1.0-SNAPSHOT</version>
+        <relativePath>../..</relativePath>
     </parent>
 
     <groupId>org.atmosphere.samples</groupId>
@@ -93,41 +94,33 @@
         </plugins>
     </build>
 
-
     <dependencies>
         <dependency>
             <groupId>org.atmosphere</groupId>
             <artifactId>atmosphere-gwt-server</artifactId>
-            <version>1.1.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.atmosphere</groupId>
             <artifactId>atmosphere-gwt-extra</artifactId>
-            <version>1.1.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency> 
            <groupId>org.atmosphere</groupId> 
            <artifactId>gwtprojsonserializer</artifactId> 
-           <version>1.0.0</version> 
-           <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.google.gwt</groupId>
             <artifactId>gwt-user</artifactId>
-            <version>${gwt-version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.google.gwt</groupId>
             <artifactId>gwt-servlet</artifactId>
-            <version>${gwt-version}</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-jdk14</artifactId>
-            <version>${slf4j-version}</version>
         </dependency>
         <dependency>
             <groupId>javax.validation</groupId>
