--- a/gwt/samples/gwt-jsdemo/pom.xml
+++ b/gwt/samples/gwt-jsdemo/pom.xml
@@ -4,8 +4,9 @@
 
     <parent>
         <groupId>org.atmosphere</groupId>
-        <artifactId>atmosphere-gwt</artifactId>
+        <artifactId>atmosphere-gwt-project</artifactId>
         <version>1.1.0-SNAPSHOT</version>
+        <relativePath>../..</relativePath>
     </parent>
 
     <groupId>org.atmosphere.samples</groupId>
@@ -24,14 +25,12 @@
         <dependency>
             <groupId>org.atmosphere</groupId>
             <artifactId>atmosphere-gwt-js</artifactId>
-            <version>1.1.1-SNAPSHOT</version>
             <type>war</type>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.atmosphere</groupId>
             <artifactId>atmosphere-gwt-server</artifactId>
-            <version>1.1.1-SNAPSHOT</version>
             <exclusions>
                 <exclusion>
                     <artifactId>gwt-servlet</artifactId>
@@ -40,9 +39,12 @@
             </exclusions>
         </dependency>
         <dependency>
+            <groupId>com.google.gwt</groupId>
+            <artifactId>gwt-servlet</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.atmosphere</groupId>
             <artifactId>atmosphere-gwt-jackson</artifactId>
-            <version>1.1.1-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -58,13 +60,9 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-jdk14</artifactId>
-            <version>${slf4j-impl-version}</version>
             <scope>runtime</scope>
         </dependency>
     </dependencies>
-    <properties>
-        <netbeans.hint.deploy.server>Tomcat</netbeans.hint.deploy.server>
-    </properties>
 </project>
 
 
