Include atmosphere-gwt-project pom in build

--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     
     <url>https://github.com/Atmosphere/atmosphere</url>
     <modules>
-        <module>gwt/modules</module>
+        <module>gwt</module>
         <module>guice/modules</module>
         <module>spring/modules</module>
         <module>jgroups/modules</module>
