--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.atmosphere</groupId>
         <artifactId>atmosphere-project</artifactId>
-        <version>1.1.0-SNAPSHOT</version>
+        <version>1.1.0.beta1</version>
     </parent>
     
     <groupId>org.atmosphere</groupId>
