--- a/cometd/modules/pom.xml
+++ b/cometd/modules/pom.xml
@@ -3,14 +3,14 @@
     <parent>
         <groupId>org.atmosphere</groupId>
         <artifactId>atmosphere-project</artifactId>
-        <version>1.1.0-SNAPSHOT</version>
+        <version>1.1.0.beta1</version>
 
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.atmosphere</groupId>
     <artifactId>atmosphere-cometd</artifactId>
     <packaging>bundle</packaging>
-    <version>1.1.0-SNAPSHOT</version>
+    <version>1.1.0.beta1</version>
     <name>atmosphere-cometd</name>
     <url>https://github.com/Atmosphere/atmosphere</url>
     <build>
@@ -70,7 +70,7 @@
         <dependency>
             <groupId>org.atmosphere</groupId>
             <artifactId>atmosphere-runtime</artifactId>
-            <version>${project.version}</version>
+            <version>1.1.0.beta1</version>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
