--- a/hazelcast/modules/pom.xml
+++ b/hazelcast/modules/pom.xml
@@ -3,13 +3,13 @@
     <parent>
         <groupId>org.atmosphere</groupId>
         <artifactId>atmosphere-project</artifactId>
-        <version>1.1.0-SNAPSHOT</version>
+        <version>1.1.0.beta1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.atmosphere</groupId>
     <artifactId>atmosphere-hazelcast</artifactId>
     <packaging>bundle</packaging>
-    <version>1.1.0-SNAPSHOT</version>
+    <version>1.1.0.beta1</version>
     <name>atmosphere-hazelcast</name>
     <url>https://github.com/Atmosphere/atmosphere</url>
     <build>
@@ -44,7 +44,7 @@
         <dependency>
             <groupId>org.atmosphere</groupId>
             <artifactId>atmosphere-jersey</artifactId>
-            <version>${project.version}</version>
+            <version>1.1.0.beta1</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
