--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     
     <groupId>org.atmosphere</groupId>
     <artifactId>atmosphere-extensions</artifactId>
-    <version>1.1.0-SNAPSHOT</version>
+    <version>1.1.0.beta1</version>
     <packaging>pom</packaging>
     <name>atmosphere-extensions</name>
     
