--- a/guice/samples/di-guice-sample/pom.xml
+++ b/guice/samples/di-guice-sample/pom.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <parent>
-        <groupId>org.atmosphere.samples</groupId>
-        <artifactId>atmosphere-samples</artifactId>
+        <groupId>org.atmosphere</groupId>
+        <artifactId>atmosphere-extension-project</artifactId>
         <version>1.1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -13,18 +13,18 @@
     <name>atmosphere-di-guice-sample</name>
     <dependencies>
         <dependency>
-            <groupId>org.atmosphere</groupId>
+            <groupId>atmosphere-extensions</groupId>
             <artifactId>atmosphere-jquery</artifactId>
             <version>${project.version}</version>
             <type>war</type>
         </dependency>
         <dependency>
-            <groupId>org.atmosphere</groupId>
+            <groupId>atmosphere-extensions</groupId>
             <artifactId>atmosphere-jersey</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.atmosphere</groupId>
+            <groupId>atmosphere-extensions</groupId>
             <artifactId>atmosphere-guice</artifactId>
             <version>${project.version}</version>
         </dependency>
