--- a/gwt/modules/atmosphere-gwt-extra/pom.xml
+++ b/gwt/modules/atmosphere-gwt-extra/pom.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.atmosphere</groupId>
+        <groupId>atmosphere-extensions</groupId>
         <artifactId>atmosphere-gwt</artifactId>
-        <version>1.1.0.beta1</version>
+        <version>${atmosphere-version}</version>
     </parent>
 
-    <groupId>org.atmosphere</groupId>
+    <groupId>atmosphere-extensions</groupId>
     <artifactId>atmosphere-gwt-extra</artifactId>
     <packaging>jar</packaging>
     <name>atmosphere-gwt-extra</name>
@@ -29,7 +30,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.atmosphere</groupId>
+            <groupId>atmosphere-extensions</groupId>
             <artifactId>atmosphere-gwt-client</artifactId>
             <scope>compile</scope>
         </dependency>
@@ -37,10 +38,10 @@
             <groupId>com.google.gwt</groupId>
             <artifactId>gwt-user</artifactId>
         </dependency>
-        <dependency> 
-           <groupId>org.atmosphere</groupId> 
-           <artifactId>gwtprojsonserializer</artifactId> 
+        <dependency>
+            <groupId>org.atmosphere</groupId>
+            <artifactId>gwtprojsonserializer</artifactId>
         </dependency>
     </dependencies>
-    
+
 </project>
