--- a/gwt/modules/atmosphere-gwt-jackson/pom.xml
+++ b/gwt/modules/atmosphere-gwt-jackson/pom.xml
@@ -2,11 +2,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.atmosphere</groupId>
+    <groupId>atmosphere-extensions</groupId>
     <artifactId>atmosphere-gwt</artifactId>
-    <version>1.1.0.beta1</version>
+    <version>${atmosphere-version}</version>
   </parent>
-  <groupId>org.atmosphere</groupId>
+  <groupId>atmosphere-extensions</groupId>
   <artifactId>atmosphere-gwt-jackson</artifactId>
   <name>atmosphere-gwt-jackson</name>
   
@@ -16,7 +16,7 @@
   
   <dependencies>
       <dependency>
-          <groupId>org.atmosphere</groupId>
+          <groupId>atmosphere-extensions</groupId>
           <artifactId>atmosphere-gwt-server</artifactId>
       </dependency>
       <dependency>
