--- a/gwt/modules/atmosphere-gwt-js/pom.xml
+++ b/gwt/modules/atmosphere-gwt-js/pom.xml
@@ -3,12 +3,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.atmosphere</groupId>
+        <groupId>atmosphere-extensions</groupId>
         <artifactId>atmosphere-gwt</artifactId>
-        <version>1.1.0.beta1</version>
+        <version>${atmosphere-version}</version>
     </parent>
 
-    <groupId>org.atmosphere</groupId>
+    <groupId>atmosphere-extensions</groupId>
     <artifactId>atmosphere-gwt-js</artifactId>
     <packaging>war</packaging>
     <name>atmosphere-gwt-js</name>
@@ -88,7 +88,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.atmosphere</groupId>
+            <groupId>atmosphere-extensions</groupId>
             <artifactId>atmosphere-gwt-extra</artifactId>
         </dependency>
         <dependency>
