--- a/gwt/modules/atmosphere-gwt-poll/pom.xml
+++ b/gwt/modules/atmosphere-gwt-poll/pom.xml
@@ -2,12 +2,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.atmosphere</groupId>
+        <groupId>atmosphere-extensions</groupId>
         <artifactId>atmosphere-gwt</artifactId>
-        <version>1.1.0.beta1</version>
+        <version>${atmosphere-version}</version>
     </parent>
 
-    <groupId>org.atmosphere</groupId>
+    <groupId>atmosphere-extensions</groupId>
     <artifactId>atmosphere-gwt-poll</artifactId>
     <packaging>jar</packaging>
     <name>atmosphere-gwt-poll</name>
