--- a/gwt/pom.xml
+++ b/gwt/pom.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <parent>
         <groupId>org.atmosphere</groupId>
-        <artifactId>atmosphere-extensions</artifactId>
-        <version>1.1.0.beta1</version>
+        <artifactId>atmosphere-extension-project</artifactId>
+        <version>1.1.0-SNAPSHOT</version>
     </parent>
     
-    <groupId>org.atmosphere</groupId>
+    <groupId>atmosphere-extensions</groupId>
     <artifactId>atmosphere-gwt-project</artifactId>
     <name>atmosphere-gwt-project</name>
-    <version>1.1.0.beta1</version>
+    <version>${atmosphere-version}</version>
     <packaging>pom</packaging>
 
     <url>https://github.com/Atmosphere/atmosphere-extensions/gwt</url>
@@ -49,43 +48,43 @@
   <dependencyManagement>
     <dependencies>
       <dependency>
-        <groupId>org.atmosphere</groupId>
+        <groupId>atmosphere-extensions</groupId>
         <artifactId>atmosphere-gwt-common</artifactId>
-        <version>1.1.0.beta1</version>
+        <version>${atmosphere-version}</version>
       </dependency>
       <dependency>
-        <groupId>org.atmosphere</groupId>
+        <groupId>atmosphere-extensions</groupId>
         <artifactId>atmosphere-gwt-client</artifactId>
-        <version>1.1.0.beta1</version>
+        <version>${atmosphere-version}</version>
         <scope>provided</scope>
       </dependency>
       <dependency>
-        <groupId>org.atmosphere</groupId>
+        <groupId>atmosphere-extensions</groupId>
         <artifactId>atmosphere-gwt-extra</artifactId>
-        <version>1.1.0.beta1</version>
+        <version>${atmosphere-version}</version>
         <scope>provided</scope>
       </dependency>
       <dependency>
-        <groupId>org.atmosphere</groupId>
+        <groupId>atmosphere-extensions</groupId>
         <artifactId>atmosphere-gwt-server</artifactId>
-        <version>1.1.0.beta1</version>
+        <version>${atmosphere-version}</version>
       </dependency>
       <dependency>
-        <groupId>org.atmosphere</groupId>
+        <groupId>atmosphere-extensions</groupId>
         <artifactId>atmosphere-gwt-poll</artifactId>
-        <version>1.1.0.beta1</version>
+        <version>${atmosphere-version}</version>
       </dependency>
       <dependency>
-        <groupId>org.atmosphere</groupId>
+        <groupId>atmosphere-extensions</groupId>
         <artifactId>atmosphere-gwt-js</artifactId>
-        <version>1.1.0.beta1</version>
+        <version>${atmosphere-version}</version>
         <type>war</type>
         <scope>runtime</scope>
       </dependency>
       <dependency>
-        <groupId>org.atmosphere</groupId>
+        <groupId>atmosphere-extensions</groupId>
         <artifactId>atmosphere-gwt-jackson</artifactId>
-        <version>1.1.0.beta1</version>
+        <version>${atmosphere-version}</version>
       </dependency>
       <dependency>
         <groupId>com.google.gwt</groupId>
@@ -108,10 +107,10 @@
       <dependency>
         <groupId>org.atmosphere</groupId>
         <artifactId>atmosphere-runtime</artifactId>
-        <version>1.1.0.beta1</version>
+        <version>${atmosphere-version}</version>
       </dependency>
       <dependency> 
-        <groupId>org.atmosphere</groupId> 
+          <groupId>org.atmosphere</groupId>
         <artifactId>gwtprojsonserializer</artifactId> 
         <version>1.0.0</version> 
         <scope>provided</scope>
