--- a/gwt/samples/gwt-conn-share/pom.xml
+++ b/gwt/samples/gwt-conn-share/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.atmosphere</groupId>
+        <groupId>atmosphere-extensions</groupId>
         <artifactId>atmosphere-gwt-project</artifactId>
         <version>1.1.0-SNAPSHOT</version>
         <relativePath>../..</relativePath>
@@ -96,16 +96,16 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.atmosphere</groupId>
+            <groupId>atmosphere-extensions</groupId>
             <artifactId>atmosphere-gwt-server</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.atmosphere</groupId>
+            <groupId>atmosphere-extensions</groupId>
             <artifactId>atmosphere-gwt-extra</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency> 
-           <groupId>org.atmosphere</groupId> 
+           <groupId>atmosphere-extensions</groupId>
            <artifactId>gwtprojsonserializer</artifactId> 
         </dependency>
         <dependency>
