--- a/jgroups/samples/pom.xml
+++ b/jgroups/samples/pom.xml
@@ -2,8 +2,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <parent>
-        <groupId>org.atmosphere.samples</groupId>
-        <artifactId>atmosphere-samples</artifactId>
+        <groupId>org.atmosphere</groupId>
+        <artifactId>atmosphere-extension-project</artifactId>
         <version>1.1.0-SNAPSHOT</version>
     </parent>
 
@@ -31,7 +31,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.atmosphere</groupId>
+            <groupId>atmosphere-extensions</groupId>
             <artifactId>atmosphere-jgroups</artifactId>
             <version>${project.version}</version>
         </dependency>
