--- a/socketio/samples/native-socketio-chat/pom.xml
+++ b/socketio/samples/native-socketio-chat/pom.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<parent>
-		<groupId>org.atmosphere.samples</groupId>
-		<artifactId>atmosphere-samples</artifactId>
-		<version>1.1.0-SNAPSHOT</version>
-
-	</parent>
+    <parent>
+        <groupId>org.atmosphere</groupId>
+        <artifactId>atmosphere-extension-project</artifactId>
+        <version>1.1.0-SNAPSHOT</version>
+    </parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.atmosphere.samples</groupId>
 	<artifactId>atmosphere-nativesocketio-chat</artifactId>
@@ -17,7 +16,7 @@
 		<dependency>
 			<groupId>org.atmosphere</groupId>
 			<artifactId>atmosphere-runtime</artifactId>
-			<version>${project.version}</version>
+			<version>${atmosphere-version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.atmosphere</groupId>
