--- a/spring/modules/pom.xml
+++ b/spring/modules/pom.xml
@@ -1,17 +1,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <parent>
         <groupId>org.atmosphere</groupId>
-        <artifactId>atmosphere-project</artifactId>
-        <version>1.1.0.beta1</version>
-
+        <artifactId>atmosphere-extension-project</artifactId>
+        <version>1.1.0-SNAPSHOT</version>
     </parent>
-
-    <groupId>org.atmosphere</groupId>
+    <groupId>atmosphere-extensions</groupId>
     <artifactId>atmosphere-spring</artifactId>
     <packaging>jar</packaging>
-    <version>1.1.0.beta1</version>
+    <version>${atmosphere-version}</version>
     <name>atmosphere-spring</name>
     <url>https://github.com/Atmosphere/atmosphere</url>
 
@@ -19,7 +16,7 @@
         <dependency>
             <groupId>org.atmosphere</groupId>
             <artifactId>atmosphere-runtime</artifactId>
-            <version>1.1.0.beta1</version>
+            <version>${atmosphere-version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
