--- a/weblogic/pom.xml
+++ b/weblogic/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <parent>
         <groupId>org.atmosphere</groupId>
-        <artifactId>atmosphere-project</artifactId>
+        <artifactId>atmosphere-extension-project</artifactId>
         <version>1.1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -13,6 +13,5 @@
     <url>https://github.com/Atmosphere/atmosphere-extensions/weblogic</url>
     <modules>
         <module>modules</module>
-        <module>samples</module>
     </modules>
 </project>
