--- a/xmpp/modules/pom.xml
+++ b/xmpp/modules/pom.xml
@@ -2,15 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <parent>
         <groupId>org.atmosphere</groupId>
-        <artifactId>atmosphere-project</artifactId>
-        <version>1.1.0.beta1</version>
-
+        <artifactId>atmosphere-extension-project</artifactId>
+        <version>1.1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.atmosphere</groupId>
     <artifactId>atmosphere-xmpp</artifactId>
     <packaging>bundle</packaging>
-    <version>1.1.0.beta1</version>
+    <version>${atmosphere-version}</version>
     <name>atmosphere-xmpp</name>
     <url>https://github.com/Atmosphere/atmosphere</url>
     <build>
@@ -45,7 +44,7 @@
         <dependency>
             <groupId>org.atmosphere</groupId>
             <artifactId>atmosphere-jersey</artifactId>
-            <version>1.1.0.beta1</version>
+            <version>${atmosphere-version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
