--- a/xmpp/samples/pom.xml
+++ b/xmpp/samples/pom.xml
@@ -1,12 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-
     <parent>
-        <groupId>org.atmosphere.samples</groupId>
-        <artifactId>atmosphere-samples</artifactId>
+        <groupId>org.atmosphere</groupId>
+        <artifactId>atmosphere-extension-project</artifactId>
         <version>1.1.0-SNAPSHOT</version>
     </parent>
-
     <modelVersion>4.0.0</modelVersion>
     <artifactId>atmosphere-xmpp-demo</artifactId>
     <packaging>war</packaging>
@@ -31,7 +29,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.atmosphere</groupId>
+            <groupId>atmosphere-extensions</groupId>
             <artifactId>atmosphere-xmpp</artifactId>
             <version>${project.version}</version>
         </dependency>
