--- a/cometd/samples/cometd/pom.xml
+++ b/cometd/samples/cometd/pom.xml
@@ -73,9 +73,9 @@
             </exclusions>
         </dependency>
         <dependency>
-            <groupId>atmosphere-extensions</groupId>
+            <groupId>org.atmosphere</groupId>
             <artifactId>atmosphere-cometd</artifactId>
-            <version>1.1.0-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
