--- a/guice/pom.xml
+++ b/guice/pom.xml
@@ -6,9 +6,10 @@
         <version>1.1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.atmosphere</groupId>
+    <groupId>org.atmosphere.extensions</groupId>
     <name>atmosphere-guice-project</name>
-    <artifactId>1.1.0-SNAPSHOT</artifactId>
+    <artifactId>org.atmosphere.extensions.guice</artifactId>
+    <version>1.1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <url>https://github.com/Atmosphere/atmosphere-extensions/guice</url>
     <modules>
