--- a/guice/samples/chat-guice/pom.xml
+++ b/guice/samples/chat-guice/pom.xml
@@ -26,6 +26,8 @@
         <dependency>
             <groupId>org.apache.geronimo.specs</groupId>
             <artifactId>geronimo-servlet_3.0_spec</artifactId>
+            <version>1.0</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
