--- a/guice/samples/di-guice-sample/pom.xml
+++ b/guice/samples/di-guice-sample/pom.xml
@@ -13,20 +13,20 @@
     <name>atmosphere-di-guice-sample</name>
     <dependencies>
         <dependency>
-            <groupId>atmosphere-extensions</groupId>
+            <groupId>org.atmosphere</groupId>
             <artifactId>atmosphere-jquery</artifactId>
-            <version>${project.version}</version>
+            <version>${atmosphere-version}</version>
             <type>war</type>
         </dependency>
         <dependency>
-            <groupId>atmosphere-extensions</groupId>
+            <groupId>org.atmosphere</groupId>
             <artifactId>atmosphere-jersey</artifactId>
-            <version>${project.version}</version>
+            <version>${atmosphere-version}</version>
         </dependency>
         <dependency>
-            <groupId>atmosphere-extensions</groupId>
+            <groupId>org.atmosphere</groupId>
             <artifactId>atmosphere-guice</artifactId>
-            <version>${project.version}</version>
+            <version>${atmosphere-version}</version>
         </dependency>
         <dependency>
             <groupId>com.google.inject.extensions</groupId>
@@ -62,6 +62,8 @@
         <dependency>
             <groupId>org.apache.geronimo.specs</groupId>
             <artifactId>geronimo-servlet_3.0_spec</artifactId>
+            <version>1.0</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
