--- a/gwt/modules/atmosphere-gwt-client/pom.xml
+++ b/gwt/modules/atmosphere-gwt-client/pom.xml
@@ -3,12 +3,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>atmosphere-extensions</groupId>
+        <groupId>org.atmosphere</groupId>
         <artifactId>atmosphere-gwt</artifactId>
-        <version>${atmosphere-version}</version>
+        <version>1.1.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>atmosphere-extensions</groupId>
+    <groupId>org.atmosphere</groupId>
     <artifactId>atmosphere-gwt-client</artifactId>
     <packaging>jar</packaging>
     <name>atmosphere-gwt-client</name>
@@ -29,7 +29,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>atmosphere-extensions</groupId>
+            <groupId>org.atmosphere</groupId>
             <artifactId>atmosphere-gwt-common</artifactId>
         </dependency>
         <dependency>
