--- a/gwt/modules/atmosphere-gwt-common/pom.xml
+++ b/gwt/modules/atmosphere-gwt-common/pom.xml
@@ -3,12 +3,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>atmosphere-extensions</groupId>
+        <groupId>org.atmosphere</groupId>
         <artifactId>atmosphere-gwt</artifactId>
-        <version>${atmosphere-version}</version>
+        <version>1.1.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>atmosphere-extensions</groupId>
+    <groupId>org.atmosphere</groupId>
     <artifactId>atmosphere-gwt-common</artifactId>
     <packaging>jar</packaging>
     <name>atmosphere-gwt-common</name>
