--- a/gwt/modules/atmosphere-gwt-extra/pom.xml
+++ b/gwt/modules/atmosphere-gwt-extra/pom.xml
@@ -4,12 +4,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>atmosphere-extensions</groupId>
+        <groupId>org.atmosphere</groupId>
         <artifactId>atmosphere-gwt</artifactId>
-        <version>${atmosphere-version}</version>
+        <version>1.1.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>atmosphere-extensions</groupId>
+    <groupId>org.atmosphere</groupId>
     <artifactId>atmosphere-gwt-extra</artifactId>
     <packaging>jar</packaging>
     <name>atmosphere-gwt-extra</name>
@@ -30,7 +30,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>atmosphere-extensions</groupId>
+            <groupId>org.atmosphere</groupId>
             <artifactId>atmosphere-gwt-client</artifactId>
             <scope>compile</scope>
         </dependency>
