--- a/gwt/modules/atmosphere-gwt-server/pom.xml
+++ b/gwt/modules/atmosphere-gwt-server/pom.xml
@@ -5,12 +5,12 @@
     <!-- synced to revision 144 of gwt-comet -->
 
     <parent>
-        <groupId>atmosphere-extensions</groupId>
+        <groupId>org.atmosphere</groupId>
         <artifactId>atmosphere-gwt</artifactId>
-        <version>${atmosphere-version}</version>
+        <version>1.1.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>atmosphere-extensions</groupId>
+    <groupId>org.atmosphere</groupId>
     <artifactId>atmosphere-gwt-server</artifactId>
     <packaging>jar</packaging>
     <name>atmosphere-gwt-server</name>
@@ -20,7 +20,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>atmosphere-extensions</groupId>
+            <groupId>org.atmosphere</groupId>
             <artifactId>atmosphere-gwt-common</artifactId>
         </dependency>
         <dependency>
