--- a/gwt/modules/pom.xml
+++ b/gwt/modules/pom.xml
@@ -1,31 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-  <!-- synced to revision 144 of gwt-comet -->
+    <!-- synced to revision 144 of gwt-comet -->
 
-  <parent>
-    <groupId>atmosphere-extensions</groupId>
-    <artifactId>atmosphere-gwt-project</artifactId>
-    <version>1.1.0-SNAPSHOT</version>
-  </parent>
+    <parent>
+        <groupId>org.atmosphere</groupId>
+        <artifactId>atmosphere-gwt-project</artifactId>
+        <version>1.1.0-SNAPSHOT</version>
+    </parent>
 
-  <groupId>atmosphere-extensions</groupId>
-  <artifactId>atmosphere-gwt</artifactId>
-  <packaging>pom</packaging>
-  <name>atmosphere-gwt</name>
+    <groupId>org.atmosphere</groupId>
+    <artifactId>atmosphere-gwt</artifactId>
+    <packaging>pom</packaging>
+    <name>atmosphere-gwt</name>
 
-  <description>A fork of gwt-comet project to integrate with Atmosphere</description>
-  
-  <modules>
-    <!-- not needed any as of 2.3.0 <module>gwt-exporter</module> -->
-    <module>atmosphere-gwt-client</module>
-    <module>atmosphere-gwt-extra</module>
-    <module>atmosphere-gwt-common</module>
-    <module>atmosphere-gwt-js</module>
-    <module>atmosphere-gwt-poll</module>
-    <module>atmosphere-gwt-server</module>
-    <module>atmosphere-gwt-jackson</module>
-  </modules>
+    <description>A fork of gwt-comet project to integrate with Atmosphere</description>
+
+    <modules>
+        <!-- not needed any as of 2.3.0 <module>gwt-exporter</module> -->
+        <module>atmosphere-gwt-client</module>
+        <module>atmosphere-gwt-extra</module>
+        <module>atmosphere-gwt-common</module>
+        <module>atmosphere-gwt-js</module>
+        <module>atmosphere-gwt-poll</module>
+        <module>atmosphere-gwt-server</module>
+        <module>atmosphere-gwt-jackson</module>
+    </modules>
 
 </project>
