--- a/gwt/pom.xml
+++ b/gwt/pom.xml
@@ -8,7 +8,7 @@
         <version>1.1.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>atmosphere-extensions</groupId>
+    <groupId>org.atmosphere.extensions</groupId>
     <artifactId>atmosphere-gwt-project</artifactId>
     <name>atmosphere-gwt-project</name>
     <version>1.1.0-SNAPSHOT</version>
