--- a/gwt/samples/gwt-jsdemo/pom.xml
+++ b/gwt/samples/gwt-jsdemo/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>atmosphere-extensions</groupId>
+        <groupId>org.atmosphere</groupId>
         <artifactId>atmosphere-gwt-project</artifactId>
         <version>1.1.0-SNAPSHOT</version>
         <relativePath>../..</relativePath>
@@ -23,7 +23,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>atmosphere-extensions</groupId>
+            <groupId>org.atmosphere</groupId>
             <artifactId>atmosphere-gwt-js</artifactId>
             <type>war</type>
             <scope>runtime</scope>
@@ -43,7 +43,7 @@
             <artifactId>gwt-servlet</artifactId>
         </dependency>
         <dependency>
-            <groupId>atmosphere-extensions</groupId>
+            <groupId>org.atmosphere</groupId>
             <artifactId>atmosphere-gwt-jackson</artifactId>
             <scope>runtime</scope>
         </dependency>
