--- a/jms/pom.xml
+++ b/jms/pom.xml
@@ -6,11 +6,11 @@
         <version>1.1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.atmosphere</groupId>
-    <artifactId>atmosphere-extras</artifactId>
+    <groupId>org.atmosphere.extensions</groupId>
+    <name>atmosphere-jms-project</name>
+    <artifactId>org.atmosphere.extensions.jms</artifactId>
     <version>1.1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
-    <name>atmosphere-extras</name>
     <url>https://github.com/Atmosphere/atmosphere</url>
     <modules>
         <module>modules</module>
