--- a/socketio/samples/native-socketio-chat/pom.xml
+++ b/socketio/samples/native-socketio-chat/pom.xml
@@ -21,12 +21,13 @@
 		<dependency>
 			<groupId>org.atmosphere</groupId>
 			<artifactId>atmosphere-socketio</artifactId>
-			<version>${project.version}</version>
+            <version>${project.version}</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.apache.geronimo.specs</groupId>
 			<artifactId>geronimo-servlet_3.0_spec</artifactId>
+            <version>1.0</version>
+            <scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
