--- a/xmpp/pom.xml
+++ b/xmpp/pom.xml
@@ -6,9 +6,11 @@
         <version>1.1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.atmosphere</groupId>
+    <groupId>org.atmosphere.extensions</groupId>
     <name>atmosphere-xmpp-project</name>
-    <artifactId>1.1.0-SNAPSHOT</artifactId>
+    <artifactId>org.atmosphere.extensions.xmpp</artifactId>
+    <version>1.1.0-SNAPSHOT</version>
+
     <packaging>pom</packaging>
     <url>https://github.com/Atmosphere/atmosphere-extensions/xmpp</url>
     <modules>
