Add relative path

--- a/pom.xml
+++ b/pom.xml
@@ -125,7 +125,10 @@
                 <configuration>
                     <filesets>
                         <fileset>
-                            <directory>${project.basedir}/*releaseBackup</directory>
+                            <directory>${project.basedir}</directory>
+                            <includes>
+                                <include>*.releaseBackup</include>
+                            </includes>
                         </fileset>
                         <fileset>
                             <directory>${project.basedir}/work</directory>
