--- a/spring/modules/pom.xml
+++ b/spring/modules/pom.xml
@@ -4,6 +4,7 @@
         <groupId>org.atmosphere</groupId>
         <artifactId>atmosphere-extension-project</artifactId>
         <version>1.1.0-SNAPSHOT</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
     <groupId>org.atmosphere</groupId>
     <artifactId>atmosphere-spring</artifactId>
