--- a/jgroups/modules/pom.xml
+++ b/jgroups/modules/pom.xml
@@ -54,7 +54,7 @@
         <dependency>
             <groupId>org.atmosphere</groupId>
             <artifactId>atmosphere-jersey</artifactId>
-            <version>${atmosphere-version}</version>
+            <version>1.1.0.beta1</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
