--- a/socketio/modules/pom.xml
+++ b/socketio/modules/pom.xml
@@ -45,7 +45,7 @@
 		<dependency>
 			<groupId>org.atmosphere</groupId>
 			<artifactId>atmosphere-runtime</artifactId>
-			<version>${atmosphere-version}</version>
+			<version>1.1.0.beta1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
