--- a/spring/samples/spring-websocket/pom.xml
+++ b/spring/samples/spring-websocket/pom.xml
@@ -80,12 +80,12 @@
         <dependency>
             <groupId>org.atmosphere</groupId>
             <artifactId>atmosphere-runtime</artifactId>
-            <version>${atmosphere-version}</version>
+            <version>1.1.0.beta1</version>
         </dependency>
         <dependency>
             <groupId>org.atmosphere</groupId>
             <artifactId>atmosphere-jquery</artifactId>
-            <version>${atmosphere-version}</version>
+            <version>1.1.0.beta1</version>
             <type>war</type>
         </dependency>
         <dependency>
