--- a/xmpp/samples/pom.xml
+++ b/xmpp/samples/pom.xml
@@ -36,7 +36,7 @@
         <dependency>
             <groupId>org.atmosphere.samples</groupId>
             <artifactId>atmosphere-jquery-pubsub</artifactId>
-            <version>${atmosphere-version}</version>
+            <version>1.1.0.beta1</version>
             <type>war</type>
         </dependency>
         <dependency>
