Still failling, not sure what's happening here

--- a/guice/samples/di-guice-sample/pom.xml
+++ b/guice/samples/di-guice-sample/pom.xml
@@ -16,18 +16,18 @@
         <dependency>
             <groupId>org.atmosphere</groupId>
             <artifactId>atmosphere-jquery</artifactId>
-            <version>1.1.0.beta1</version>
+            <version>${atmosphere-version}</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.atmosphere</groupId>
             <artifactId>atmosphere-jersey</artifactId>
-            <version>1.1.0.beta1</version>
+            <version>${atmosphere-version}</version>
         </dependency>
         <dependency>
             <groupId>org.atmosphere</groupId>
             <artifactId>atmosphere-guice</artifactId>
-            <version>1.1.0.beta1</version>
+            <version>${atmosphere-version}</version>
         </dependency>
         <dependency>
             <groupId>com.google.inject.extensions</groupId>
