--- a/guice/modules/pom.xml
+++ b/guice/modules/pom.xml
@@ -17,7 +17,7 @@
         <dependency>
             <groupId>org.atmosphere</groupId>
             <artifactId>atmosphere-jersey</artifactId>
-            <version>1.1.0.beta1</version>
+            <version>${atmosphere-version}</version>
         </dependency>
         <dependency>
             <groupId>com.sun.jersey.contribs</groupId>
