--- a/jms/modules/pom.xml
+++ b/jms/modules/pom.xml
@@ -45,7 +45,7 @@
         <dependency>
             <groupId>org.atmosphere</groupId>
             <artifactId>atmosphere-annotations</artifactId>
-            <version>1.1.0.beta1</version>
+            <version>${atmosphere-version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
