--- a/redis/samples/pom.xml
+++ b/redis/samples/pom.xml
@@ -37,7 +37,7 @@
         <dependency>
             <groupId>org.atmosphere.samples</groupId>
             <artifactId>atmosphere-jquery-pubsub</artifactId>
-            <version>1.1.0.beta1</version>
+            <version>${atmosphere-version}</version>
             <type>war</type>
         </dependency>
         <dependency>
