--- a/socketio/samples/socketio-chat/pom.xml
+++ b/socketio/samples/socketio-chat/pom.xml
@@ -17,7 +17,7 @@
 		<dependency>
 			<groupId>org.atmosphere</groupId>
 			<artifactId>atmosphere-runtime</artifactId>
-			<version>1.1.0.beta1</version>
+			<version>${atmosphere-version}</version>
 		</dependency>
 		<dependency>
             <groupId>org.atmosphere</groupId>
