--- a/weblogic/modules/pom.xml
+++ b/weblogic/modules/pom.xml
@@ -55,7 +55,7 @@
         <dependency>
             <groupId>org.atmosphere</groupId>
             <artifactId>atmosphere-runtime</artifactId>
-            <version>1.1.0.beta1</version>
+            <version>${atmosphere-version}</version>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
