GWT Wrapper further enhancements

--- a/gwt/samples/gwt-wrapper-demo/src/main/webapp/WEB-INF/web.xml
+++ b/gwt/samples/gwt-wrapper-demo/src/main/webapp/WEB-INF/web.xml
@@ -9,7 +9,7 @@
         <servlet-class>org.atmosphere.cpr.AtmosphereServlet</servlet-class>
         <init-param>
             <param-name>org.atmosphere.cpr.AtmosphereInterceptor</param-name>
-            <param-value>org.atmosphere.extensions.gwtwrapper.server.GwtRpcInterceptor</param-value>
+            <param-value>org.atmosphere.extensions.gwtwrapper.server.GwtRpcInterceptor,org.atmosphere.client.TrackMessageSizeInterceptor</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
         <!--Uncomment if you want to use Servlet 3.0 Async Support-->
