Add JSON/AutoBean support for gwt-wrapper

--- a/gwt/modules/atmosphere-gwt-jackson/pom.xml
+++ b/gwt/modules/atmosphere-gwt-jackson/pom.xml
@@ -17,7 +17,7 @@
     <dependencies>
         <dependency>
             <groupId>org.atmosphere</groupId>
-            <artifactId>atmosphere-gwt-server</artifactId>
+            <artifactId>atmosphere-gwt-common</artifactId>
         </dependency>
         <dependency>
             <groupId>org.codehaus.jackson</groupId>
