--- a/gwt/samples/gwt-wrapper-demo/pom.xml
+++ b/gwt/samples/gwt-wrapper-demo/pom.xml
@@ -104,6 +104,11 @@
             <version>1.1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>org.atmosphere</groupId>
+            <artifactId>atmosphere-gwt-jackson</artifactId>
+            <version>1.1.0-SNAPSHOT</version>
+        </dependency>        
+        <dependency>
             <groupId>com.google.gwt</groupId>
             <artifactId>gwt-user</artifactId>
             <scope>provided</scope>
