--- a/gwt/samples/gwt-wrapper-demo/src/main/webapp/WEB-INF/web.xml
+++ b/gwt/samples/gwt-wrapper-demo/src/main/webapp/WEB-INF/web.xml
@@ -22,16 +22,7 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>AtmosphereServlet</servlet-name>
-        <url-pattern>/GwtWrapperDemo/atmosphere</url-pattern>
-    </servlet-mapping>
-
-    <servlet>
-        <servlet-name>ApplicationService</servlet-name>
-        <servlet-class>org.atmosphere.samples.server.ApplicationServlet</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>ApplicationService</servlet-name>
-        <url-pattern>/GwtWrapperDemo/appservice</url-pattern>
+        <url-pattern>/GwtWrapperDemo/atmosphere/*</url-pattern>
     </servlet-mapping>
 
     <welcome-file-list>
