--- a/hazelcast/samples/pom.xml
+++ b/hazelcast/samples/pom.xml
@@ -32,7 +32,7 @@
         <dependency>
             <groupId>org.atmosphere</groupId>
             <artifactId>atmosphere-hazelcast</artifactId>
-            <version>${atmosphere-version}</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.atmosphere.samples</groupId>
