[GWT 2] added jersey support for GWT [beta]

--- a/gwt/modules/atmosphere-gwt-common/pom.xml
+++ b/gwt/modules/atmosphere-gwt-common/pom.xml
@@ -27,6 +27,10 @@
         </resources>
     </build>
 
-    <dependencies>
+    <dependencies>   
+      <dependency>
+          <groupId>com.google.gwt</groupId>
+          <artifactId>gwt-user</artifactId>
+      </dependency>
     </dependencies>
 </project>
