--- a/gwt/modules/atmosphere-gwt-jersey/pom.xml
+++ b/gwt/modules/atmosphere-gwt-jersey/pom.xml
@@ -28,9 +28,8 @@
       <version>1.1.0-SNAPSHOT</version>
     </dependency>   
     <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>servlet-api</artifactId>
-      <version>2.5</version>
+        <groupId>com.google.gwt</groupId>
+        <artifactId>gwt-user</artifactId>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
