[GWT20] Refactor package names

--- a/gwt20/samples/gwt20-demo/src/main/resources/logging.properties
+++ b/gwt20/samples/gwt20-demo/src/main/resources/logging.properties
@@ -29,6 +29,6 @@ java.util.logging.FileHandler.count=1
 java.util.logging.FileHandler.formatter=java.util.logging.SimpleFormatter 
 
 
-org.atmosphere.level=INFO
-org.atmosphere.extensions.gwtwrapper.level=FINEST
+org.atmosphere.level=FINEST
+org.atmosphere.extensions.level=FINEST
 org.atmosphere.samples.level=FINEST
